--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,26 @@
-project(obs-shaderfilter VERSION 1.21.0)
+# --- Detect if the plugin is build out of tree or not ---
+if(CMAKE_PROJECT_NAME STREQUAL "obs-studio")
+  set(BUILD_OUT_OF_TREE OFF)
+else()
+  set(BUILD_OUT_OF_TREE ON)
+  cmake_minimum_required(VERSION 3.18)
+endif()
+
+project(obs-shaderfilter VERSION 1.21.1)
 set(PROJECT_FULL_NAME "OBS Shaderfilter")
 
-set(obs-shaderfilter_SOURCES
-	obs-shaderfilter.c)
+# Set new UUIDs when you start to create a new plugin.
+set(MACOS_PACKAGE_UUID "7DA301DD-35F4-44C3-BE34-B33528D487F5")
+set(MACOS_INSTALLER_UUID "D1247630-89C0-498A-8A3B-B0752080DEC2")
 
-if(WIN32)
+add_library(${PROJECT_NAME} MODULE)
+
+if(BUILD_OUT_OF_TREE)
+  find_package(libobs REQUIRED)
+  include(cmake/ObsPluginHelpers.cmake)
+endif()
+
+if(OS_WINDOWS)
 	get_filename_component(ISS_FILES_DIR "${CMAKE_BINARY_DIR}\\..\\package" ABSOLUTE)
 	file(TO_NATIVE_PATH "${ISS_FILES_DIR}" ISS_FILES_DIR)
 	get_filename_component(ISS_PACKAGE_DIR "${CMAKE_PACKAGE_PREFIX}\\.." ABSOLUTE)
@@ -14,15 +30,38 @@ if(WIN32)
 	configure_file("installer.iss.in"
 			"${PROJECT_BINARY_DIR}/installer.iss"
 		)
-	configure_file(resource.rc.in obs-shaderfilter.rc)
-	list(APPEND obs-shaderfilter_SOURCES
-		obs-shaderfilter.rc)
+	configure_file(${CMAKE_CURRENT_SOURCE_DIR}/resource.rc.in ${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}.rc)
+	target_sources(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}.rc)
+	
+elseif(OS_MACOS)
+	set(MACOS_BUNDLEID "com.exeldro.${PROJECT_NAME}")
+	set(MACOSX_PLUGIN_GUI_IDENTIFIER "${MACOS_BUNDLEID}")
+	set(MACOSX_PLUGIN_BUNDLE_VERSION "${PROJECT_VERSION}")
+	set(MACOSX_PLUGIN_SHORT_VERSION_STRING "1")
+	configure_file(cmake/bundle/macos/installer-macos.pkgproj.in ${CMAKE_BINARY_DIR}/installer-macos.generated.pkgproj)
+	target_compile_options(${PROJECT_NAME} PRIVATE -Wall)
 endif()
 
-add_library(obs-shaderfilter MODULE
-	${obs-shaderfilter_SOURCES})
-target_link_libraries(obs-shaderfilter
-	libobs)
+# lines if you want add Qt UI in your plugin
+find_qt(COMPONENTS Widgets COMPONENTS_LINUX Gui)
+set_target_properties(${PROJECT_NAME} PROPERTIES AUTOMOC ON AUTOUIC ON AUTORCC ON)
 
-set_target_properties(obs-shaderfilter PROPERTIES FOLDER "plugins/exeldro")
-install_obs_plugin_with_data(obs-shaderfilter data)
+target_link_libraries(${PROJECT_NAME}
+		OBS::libobs)
+
+if(BUILD_OUT_OF_TREE)
+    if(NOT LIB_OUT_DIR)
+        set(LIB_OUT_DIR "/lib/obs-plugins")
+    endif()
+    if(NOT DATA_OUT_DIR)
+        set(DATA_OUT_DIR "/share/obs/obs-plugins/${PROJECT_NAME}")
+    endif()
+    set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "")
+    install(TARGETS ${PROJECT_NAME}
+        LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/${LIB_OUT_DIR})
+    install(DIRECTORY data/locale
+        DESTINATION ${CMAKE_INSTALL_PREFIX}/${DATA_OUT_DIR})
+else()
+    set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER "plugins/exeldro")
+endif()
+setup_plugin_target(${PROJECT_NAME})
