--- a/installer.iss.in
+++ b/installer.iss.in
@@ -11,7 +11,7 @@
 ; (To generate a new GUID, click Tools | Generate GUID inside the IDE.)
 
 ; app Information
-AppId={{347a4d1a-8c92-4425-882f-e45d26a21d6a}}
+AppId={{BAF585C6-93B0-4449-80FB-4CD5671E12AC}}
 AppName={#MyAppName}
 AppVersion={#MyAppVersion}
 AppPublisher={#MyAppPublisher}
@@ -27,18 +27,20 @@ LZMAAlgorithm=1
 DefaultDirName={code:GetDirName}
 DefaultGroupName={#MyAppName}
 AllowNoIcons=yes
-OutputDir="@ISS_FILES_DIR@"
+OutputDir="package"
 OutputBaseFilename=@PROJECT_NAME@-installer
+DirExistsWarning=no
 ; Wizard Information
 WizardStyle=modern
 WizardResizable=yes
+SetupIconFile="media/icon.ico"
 
 [Languages]
 Name: "english"; MessagesFile: "compiler:Default.isl"
 
 [Files]
-Source: "@ISS_FILES_DIR@/*"; DestDir: "{app}"; Flags: ignoreversion recursesubdirs createallsubdirs
-Source: "@ISS_PACKAGE_DIR@/msvc-redist-helper.exe"; DestDir: "{app}"; DestName: "msvc-redist-helper.exe"; Flags: ignoreversion dontcopy noencryption
+Source: "package/*"; DestDir: "{app}"; Flags: ignoreversion recursesubdirs createallsubdirs
+Source: "msvc-redist-helper.exe"; DestDir: "{app}"; DestName: "msvc-redist-helper.exe"; Flags: ignoreversion dontcopy noencryption
 ; NOTE: Don't use "Flags: ignoreversion" on any shared system files
 
 [Icons]
